AWS/EKS_new/configserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: configserver
  name: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: configserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eks-new-backend: "true"
        io.kompose.service: configserver
    spec:
      containers:
        - env:
            - name: ENCRYPT_KEY
              value: fje83Ki8403Iod87dne7Yjsl3THueh48jfuO9j4U2hf64Lo
          image: 232501549240.dkr.ecr.ap-southeast-1.amazonaws.com/ostock/configserver:chapter12
          name: configserver
          ports:
            - containerPort: 8071
          resources: {}
      restartPolicy: Always
status: {}
