AWS/EKS_new/eurekaserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: eurekaserver
  name: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eurekaserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eks-new-backend: "true"
        io.kompose.service: eurekaserver
    spec:
      containers:
        - image: 232501549240.dkr.ecr.ap-southeast-1.amazonaws.com/ostock/eurekaserver:chapter12
          name: eurekaserver
          ports:
            - containerPort: 8070
          resources: {}
      restartPolicy: Always
status: {}
