AWS/EKS_new/kafkaserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafkaserver
  name: kafkaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafkaserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eks-new-backend: "true"
        io.kompose.service: kafkaserver
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_HOST_NAME
              value: kafka
            - name: KAFKA_ADVERTISED_PORT
              value: "9092"
            - name: KAFKA_CREATE_TOPICS
              value: dresses:1:1,ratings:1:1
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: wurstmeister/kafka:latest
          name: kafka
          ports:
            - containerPort: 9092
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: kafkaserver-claim0
      restartPolicy: Always
      volumes:
        - name: kafkaserver-claim0
          persistentVolumeClaim:
            claimName: kafkaserver-claim0
status: {}
