AWS/EKS_new/licensingservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: licensingservice
  name: licensingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: licensingservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eks-new-backend: "true"
        io.kompose.service: licensingservice
    spec:
      containers:
        - env:
            - name: CONFIGSERVER_PORT
              value: "8071"
            - name: CONFIGSERVER_URI
              value: http://configserver:8071
            - name: DATABASESERVER_PORT
              value: "5432"
            - name: ENCRYPT_KEY
              value: IMSYMMETRIC
            - name: PROFILE
              value: dev
          image: 232501549240.dkr.ecr.ap-southeast-1.amazonaws.com/ostock/licensing-service:chapter12
          name: licensing-service
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
