AWS/EKS_new/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eks-new-backend: "true"
        io.kompose.service: logstash
    spec:
      containers:
        - args:
            - logstash
            - -f
            - /etc/logstash/conf.d/logstash.conf
          image: docker.elastic.co/logstash/logstash:7.7.0
          name: logstash
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /etc/logstash/conf.d
              name: logstash-claim0
      restartPolicy: Always
      volumes:
        - name: logstash-claim0
          persistentVolumeClaim:
            claimName: logstash-claim0
status: {}
