AWS/EKS_new/organizationservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: organizationservice
  name: organizationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: organizationservice
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eks-new-backend: "true"
        io.kompose.service: organizationservice
    spec:
      containers:
        - env:
            - name: CONFIGSERVER_PORT
              value: "8071"
            - name: CONFIGSERVER_URI
              value: http://configserver:8071
            - name: DATABASESERVER_PORT
              value: "5432"
            - name: ENCRYPT_KEY
              value: IMSYMMETRIC
            - name: PROFILE
              value: dev
          image: 232501549240.dkr.ecr.ap-southeast-1.amazonaws.com/ostock/organization-service:chapter12
          name: organization-service
          ports:
            - containerPort: 8081
          resources: { }
      restartPolicy: Always
status: { }
