AWS/EKS_new/authenticationservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: authenticationservice
  name: authenticationservice
spec:
  type: NodePort
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
      nodePort: 31300
  selector:
    io.kompose.service: authenticationservice
status:
  loadBalancer: {}
