AWS/EKS_new/eurekaserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: eurekaserver
  name: eurekaserver
spec:
  ports:
    - name: "8070"
      port: 8070
      targetPort: 8070
  selector:
    io.kompose.service: eurekaserver
status:
  loadBalancer: {}
