AWS/EKS_new/gatewayserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gatewayserver
  name: gatewayserver
spec:
  type: NodePort
  ports:
    - name: "8072"
      port: 8072
      targetPort: 8072
      nodePort: 31200
  selector:
    io.kompose.service: gatewayserver
status:
  loadBalancer: {}
